--- a/style.css
+++ b/style.css
@@ -57,10 +57,7 @@ body {
     transition: all 0.3s;
 }
 
-.wrapper.show-category .home-screen {
-    transform: translateX(-100%);
-}
-
+.wrapper.show-category .home-screen,
 .wrapper.show-category .category-screen {
     transform: translateX(-100%);
 }
@@ -138,7 +135,6 @@ body {
     justify-content: space-between;
     box-shadow: 0 10px 20px 5px #00000023;
     transition: all 0.3s;
-
 }
 
 .category:hover {
@@ -187,8 +183,6 @@ body {
     opacity: 1;
 }
 
-
-/* Category Screen */
 .category-screen .head-wrapper {
     display: flex;
     justify-content: space-between;
@@ -217,298 +211,8 @@ body {
     opacity: 0.6;
 }
 
-/* tasks */
-.tasks-wrapper {
-    padding: 0 30px;
-    margin-top: 1rem;
-    height: calc(100% - 12rem);
-    padding-bottom: 20px;
-    overflow: auto;
+.content {
+    margin-top: 90px;
+    padding-top: 90px;
 }
 
-.tasks {
-    padding-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.task-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-
-.task {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    font-size: 0.8rem;
-    font-weight: 500;
-    width: max-content;
-    cursor: pointer;
-}
-
-
-.task input {
-    display: none;
-}
-
-.task .checkmark {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 2px;
-    border: 1px solid #2e2e2e;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.task .checkmark svg {
-    width: 1rem;
-    color: #2e2e2e;
-    opacity: 0;
-    transition: all 0.3s;
-}
-
-.task:hover .checkmark svg {
-    opacity: 1;
-}
-
-.task .checkmark svg path {
-    stroke-width: 3;
-}
-
-.task input:checked~.checkmark {
-    background-color: #2e2e2e;
-}
-
-.task input:checked~.checkmark svg {
-    opacity: 1;
-    color: #fff;
-}
-
-.task input:checked~p {
-    text-decoration: line-through;
-    opacity: 0.6;
-}
-
-.task-wrapper .delete {
-    min-width: 2rem;
-    height: 2rem;
-    padding: 0.5rem;
-    border-radius: 50%;
-    color: #2e2e2e;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.031);
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s;
-}
-
-.task-wrapper:hover .delete {
-    opacity: 1;
-    visibility: visible;
-}
-
-.task-wrapper .delete:hover {
-    color: red;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.no-tasks {
-    margin-top: 5rem;
-    text-align: center;
-    font-size: 1.5rem;
-    opacity: 0.6;
-}
-
-/* Add Task */
-.add-task-btn {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #C724B1;
-    transition: all 0.3s;
-}
-
-.add-task-btn:hover {
-    transform: scale(1.1);
-}
-
-.add-task-btn.active {
-    z-index: 1;
-    bottom: 20rem;
-    transform: rotate(45deg);
-}
-
-.add-task-btn svg {
-    width: 2rem;
-    color: #fff;
-}
-
-.add-task {
-    position: absolute;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    padding: 20px 30px;
-    transition: all 0.3s;
-}
-
-.add-task.active {
-    bottom: 0;
-}
-
-.add-task .heading {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
-
-.input-group {
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.input-group input,
-.input-group label {
-    display: block;
-    width: 100%;
-}
-
-.input-group input,
-.input-group select {
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
-}
-
-.input-group label {
-    width: max-content;
-    padding: 0 5px;
-    margin-top: 5px;
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 5px;
-}
-
-.btns {
-    display: flex;
-    gap: 1rem;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.btns button {
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 600;
-    transition: all 0.3s;
-    z-index: 1;
-}
-
-button.add-btn {
-    background-color: #39a6f0;
-    color: #fff
-}
-
-.add-task-backdrop {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 135%;
-    height: 20rem;
-    border-radius: 50% 50% 0 0;
-    background-color: #fff;
-}
-
-.black-backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(5px);
-    background-color: #00000023;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s;
-}
-
-.black-backdrop.active {
-    opacity: 1;
-    visibility: visible;
-}
-
-.difficulty-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    margin-top: 20px;
-    padding: 10px;
-}
-
-.difficulty-wrapper label {
-    font-size: 1rem;
-    font-weight: 600;
-    color: #333;
-}
-
-.difficulty-select {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    cursor: pointer;
-    transition: border-color 0.3s;
-}
-
-.difficulty-select:focus {
-    border-color: #39a6f0;
-}
-
-.xp-bars {
-    padding: 0 30px;
-    margin-top: 1rem;
-  }
-  
-  .xp-bar {
-    margin-bottom: 1rem;
-  }
-  
-  .xp-bar h2 {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .progress {
-    width: 100%;
-    background-color: #e0e0e0;
-    border-radius: 5px;
-    overflow: hidden;
-  }
-  
-  .progress-fill {
-    height: 20px;
-    background-color: #C724B1;
-    width: 0;
-    transition: width 0.3s;
-  }
-  
